--- a/index.html
+++ b/index.html
@@ -50,24 +50,37 @@
             flex-wrap: wrap;
         }
         .product {
-            background: white;
+            background: black;
             padding: 20px;
             width: 250px;
             border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.909);
         }
         footer {
             background: #111;
             padding: 20px;
-            color: white;
+            color: brown;
             text-align: center;
             margin-top: 40px;
         }
+      
+        body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #8B4513;  /* Brown color */
+}
+
+.section {
+  background-color: #8B4513;  /* Brown for sections */
+  color: white;               /* Text white so it shows */
+  padding: 40px;
+}
+
     </style>
 </head>
 <body>
     <header>
-        <img src="J.A.S GROUP OF COMPANY.jpg " style="width:80px; height:auto; display:block; margin:0 auto 10px auto;" />
+        <img src="jJ.A.S GROUP OF COMPANY.jpg " style="width:900px; height: 300px;; display:block; margin:0 auto 10px auto;" />
         <h1 style="margin:0; font-size:28px;">J.A.S Group of Company Nig. Ltd</h1>
         <p style="margin:5px 0 0; font-size:16px;">Leading Textile Supplier in Nigeria</p>
     </header>
@@ -80,12 +93,12 @@
     </nav>
 
     <div class="hero" id="home">
-        Quality Textiles — Atamfa, Cotton Aruba, Golden & More
+        Quality Textiles — Atamfa, Cotton and Ruba, Golden Atamfa & More
     </div>
 
     <section class="section" id="about">
         <h2>About Us</h2>
-        <p>J.A.S Group of Company Nig. Ltd specializes in high‑quality textiles such as Atamfa, Cotton Aruba, and Golden fabrics. We are committed to delivering durable and stylish materials across Nigeria.</p>
+        <p>J.A.S Group of Company Nig. Ltd specializes in high‑quality textiles such as Atamfa, Cotton and Ruba, and Golden fabrics. We are committed to delivering durable and stylish materials across Nigeria.</p>
     </section>
 
     <section class="section" id="products">
@@ -96,29 +109,36 @@
                 <p>High‑quality African print fabric.</p>
             </div>
             <div class="product">
-                <h3>Cotton Aruba</h3>
-                <p>Soft and durable cotton fabric.</p>
+                <h3>Cotton and Aruba</h3>
+                <p>Soft and durable  fabric.</p>
             </div>
             <div class="product">
                 <h3>Golden Fabric</h3>
                 <p>Premium textile with unique texture.</p>
             </div>
         </div>
-    </section>
+  
+ <img src="photo_1_2025-12-13_01-54-20.jpg" heiht="300px" width="400px">
+ <img src="photo_2_2025-12-13_01-54-20.jpg" heiht="300px" width="400px">
+ <img src="photo_3_2025-12-13_01-54-20.jpg" heiht="300px" width="400px">
+ <img src="photo_4_2025-12-13_01-54-20.jpg" heiht="300px" width="400px">
+ <img src="photo_5_2025-12-13_01-54-20.jpg" heiht="300px" width="400px">  
+  </section>
 
     <section class="section" id="contact">
         <h2>Contact Us</h2>
         <p>Phone: 08089639963,07040751234</p>
-        <p>Email: info@jasgroup.com.ng</p>
-        <a href="https://wa.me/2348089639963 class="whatsapp-float" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
-         alt="WhatsApp" class="whatsapp-icon">
-</a>
+        <p>Email: Yakubii.yg@gmail.com</p>
+        <section>
+            <p> <h1> ADDRESS</h1>  </p>
+        <P> Yan nono line, kwari market kano,nig.</P>
+        </section>
+      
     </section>
 
     <footer>
         © 2025 J.A.S Group of Company Nig. Ltd — All Rights Reserved.
     </footer>
 </body>
-
 </html>
+
