--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p>High‑quality African print fabric.</p>
             </div>
             <div class="product">
-                <h3>Cotton and Aruba</h3>
+                <h3>Cotton and Roba</h3>
                 <p>Soft and durable  fabric.</p>
             </div>
             <div class="product">
@@ -119,8 +119,18 @@
         </div>
  
   </section>
+<img src="photo1.jpg"height=300px;>
+<img src="photo2.jpg"height=300px;>
+<img src="photo3.jpg"height=300px;>
+<img src="photo4.jpg"height=300px;>
+<img src="photo5.jpg"height=300px;>
+<img src="photo6.jpg"height=300px;>
+<img src="photo7.jpg"height=300px;>
+<img src="photo8.jpg"height=300px;>
+<img src="photo9.jpg"height=300px;>
+<img src="photo10.jpg"height=300px;>
 
-    <section class="section" id="contact">
+    <setion class="section" id="contact">
         <h2>Contact Us</h2>
         <p>Phone: 08089639963,07040751234</p>
         <p>Email: Yakubii.yg@gmail.com</p>
